--- a/Server/package.json
+++ b/Server/package.json
@@ -14,9 +14,10 @@
     "connect-mongo": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.18.3",
+    "express": "^4.19.2",
     "express-session": "^1.18.0",
     "mongoose": "^8.2.0",
+    "multer": "^1.4.5-lts.1",
     "node-fetch": "^3.3.2",
     "nodemon": "^3.1.0",
     "passport": "^0.7.0",
